tests/checker/ok/parameterized_type_in_expression.ow
Content = String

describeParam = (Option<Content>) -> String {
    Option<Content>.(
        * (None) -> String { "none" }
        * (Some<Content>) -> String { "some" }
    )
}

main = () -> Unit {
    "ok".print()
}
