tests/checker/fail/wrong_arm_pattern.ow
main = () -> Unit {
    Some(7).(
        * (None) -> Unit { "none".print() }
        * (Ok<Int>) -> Unit { "wrong".print() }
    )
}
